[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
#futures = "0.1"
#actix-rt = "0.2.5"
#async-stream = "0.3"
#futures-util = "0.3"
#actix-files = "0.6"